# AdventOfCode-2019

./: .clang-format  CMakeLists.txt  README.md
1/: day1.cpp
10/: day10.cpp
11/: day11.cpp
12/: day12.cpp
2/: day2.cpp
3/: day3.cpp
4/: day4.cpp
5/: day5.cpp
6/: day6.cpp
7/: day7.cpp
8/: day8.cpp
9/: day9.cpp
util/: Core.h
